# personal-site

./: .gitattributes  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.ts  portfolio-projects.toml
.github/: dependabot.yml  portfolio.toml
.github/workflows/: ci.yml  sync-cv.yml  sync-projects.yml
browser-tests/: accessibility.spec.ts
docs/: architecture.md  automation.md  cv-import.md  deployment.md  design-system.md  hosting-plan.md  project-import.md  web-quality-milestone.md  web-quality.md
docs/adr/: 0001-initial-architecture.md  0002-event-specific-ci.md  0003-transactional-cv-synchronization.md  0004-generated-rust-cv-data.md  0005-generated-cv-presentation.md  0006-generated-github-projects.md  0007-browser-accessibility-regression-checks.md  0008-csr-metadata-and-performance-budgets.md  0009-ci-bundle-reuse-and-quality-gates.md  0010-cloudflare-pages-production-hosting.md  0011-static-security-and-supply-chain.md
public/: _headers  _redirects  robots.txt  sitemap.xml
public/cv/: Hayden-Farrell-CV.tex  README.md  source-manifest.json
scripts/: cloudflare-build.sh  finalize-static-output.mjs  finalize-static-output.test.mjs  performance-audit.mjs  static-spa-server.mjs  static-spa-server.test.mjs  validate-static-output.mjs
src/: app.rs  automation.rs  content.rs  cv.rs  cv_presentation.rs  generated_cv.rs  generated_projects.rs  lib.rs  main.rs  projects.rs  routes.rs  url_policy.rs
src/components/: mod.rs  primitives.rs  project_card.rs  route_metadata.rs  site_shell.rs  structured_data.rs  timeline.rs
src/cv_sync/: generator.rs  github.rs  manifest.rs  mod.rs  parser.rs  store.rs  synchronizer.rs
src/pages/: cv.rs  home.rs  legal_notice.rs  mod.rs  not_found.rs  privacy_notice.rs  projects.rs
src/project_sync/: config.rs  generator.rs  github.rs  mod.rs  store.rs  synchronizer.rs
styles/: input.css
tests/: automation_tests.rs  content_tests.rs  cv_page_tests.rs  cv_parser_tests.rs  cv_sync_github_tests.rs  cv_sync_integration_tests.rs  cv_sync_unit_tests.rs  legal_notice_tests.rs  metadata_tests.rs  project_page_tests.rs  project_sync_github_tests.rs  project_sync_tests.rs  route_tests.rs
